# bab

./: .gitignore  OPERATIONS.md  PROGRESS.md  TROUBLESHOOTING.md  requirements.txt  vercel.json
.claude/: settings.json
api/: index.py
backend/: .env.example  ingest_middle.py  ingest_middle_batch.py  migrate.py  pyproject.toml
backend/app/: db.py  ingest.py  logging_config.py  main.py  meals_router.py  normalize.py  preprocess.py  schools_router.py
backend/migrations/: 001_create_meals.sql
backend/tests/: test_api.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/api/: meals.ts
frontend/src/assets/: main.css  tokens.css
frontend/src/components/: Pagination.vue  RecentSearch.vue  ResultTable.vue  SearchForm.vue
frontend/src/stores/: recentSearch.ts
frontend/src/types/: meal.ts
frontend/src/views/: HomeView.vue
scripts/: 01_ingest.sh  02_preprocess.sh  03_run_api.sh  04_test_all.sh
